@@ -3,6 +3,7 @@
 //  Copyright (c) 2009 by Mulle Kybernetik. See License file for details.
 //---------------------------------------------------------------------------------------
 
+#import "NSMethodSignature+OCMAdditions.h"
 #import "OCMReturnValueProvider.h"
 
 
@@ -23,9 +24,8 @@
 
 - (void)handleInvocation:(NSInvocation *)anInvocation
 {
-	const char *returnType = [[anInvocation methodSignature] methodReturnType];
-	const char *returnTypeWithoutQualifiers = returnType + (strlen(returnType) - 1);
-	if(strcmp(returnTypeWithoutQualifiers, @encode(id)) != 0)
+	const char *returnType = [[anInvocation methodSignature] methodReturnTypeWithoutQualifiers];
+	if(strcmp(returnType, @encode(id)) != 0)
 		@throw [NSException exceptionWithName:NSInvalidArgumentException reason:@"Expected invocation with object return type." userInfo:nil];
 	[anInvocation setReturnValue:&returnValue];	
 }
