@@ -2,6 +2,12 @@ Chronological listing of changes. If a particular SVN revision has no entry, tha
 check-in did not involve any code or feature changes.
 
 
+2009-08-13 (r52)
+
+* Added feature that allows to verify expectations are called in sequence.
+* Improved detection of unqualified method return type.
+
+
 2009-08-13 (r51)
 
 * Fixed bug that caused crash when using method swizzling with void return type.
